# discordbirthday

./: .Dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  dist.sh
deploy/: deploy.sh  deploy_remote.sh
migrations/2021-12-04-221303_create_birthdays/: down.sql  up.sql
rootfs/etc/s6-overlay/s6-rc.d/dbday/: run
src/: lib.rs  main.rs  models.rs  schema.rs  test.rs
src/bot/: commands.rs  mod.rs
src/database/: migration.rs  mod.rs  statements.rs
src/database/db_independant/: mod.rs
src/database/db_utils/: id_gen.rs  save_load.rs
src/utils/: discord.rs  macros.rs  mod.rs
