[package]
name = "dbday"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[dependencies]
# Thing below is only needed for Sqlite Upsert support.
# Yeeted from https://github.com/diesel-rs/diesel/issues/1854#issuecomment-828407144 / SO https://stackoverflow.com/a/68616930
diesel = { version = "^1.4.0", features = ["sqlite", "uuid", "chrono"] }
diesel_migrations = "^1.4.0"
lazy_static = "1.4.0"
dotenv = "0.15"
chrono = "0.4"
tokio = { version = "1.12", features = ["macros", "rt-multi-thread"] }
fastrand = "1.5.0"
serenity = "^0.10"
nanoid = "0.4.0"