[package]
name = "dbday"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[dependencies]
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "sqlite", "any"] }
sea-query = { version = "0.28", features = ["with-chrono"] }
sea-query-binder = { version = "0.3", features = ["sqlx-any", "with-chrono"] }
once_cell = "1.10.0"
dotenv = "0.15"
chrono = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "parking_lot"] }
serenity = "^0.11"
nanoid = "0.4.0"